<resources>
    <string name="app_name">VSL</string>
    <string name="title_menu1">Voicing your heart through your fingertips.</string>
    <string name="title_menu2">Let\'s learn sign language with just a smartphone and then socialize with our special friends.</string>
    <string name="title_menu3">Are you ready to learn?</string>
    <string name="title_menu32">Let\’s start!</string>
    <string name="quote1">“Dalam dunia bahasa isyarat, ekspresi wajah adalah palet warna emosi, dan gerakan tubuh adalah koreografi kata-kata yang menari di atas panggung tak berucap.”</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_image">Title Image</string>
    <string name="nama_user">Username</string>
    <string name="deskripsi">Description</string>
    <string name="let_see">Let\’s see some news \nfor today</string>
    <string name="let_learn">Let\’s learn some new \nthings</string>
    <string name="let_start">Let\’s start</string>
    <string name="hai_user">Hai, User</string>
    <string name="item_title">Item Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="want_to_check_your_understanding">Want to check your understanding?</string>
    <string name="confirm_passwword">Confirm Passwword</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="description">Deskripsi</string>
    <string name="let_check_your_answer">Let\'s upload your photos and we\'ll check them for your level of understanding.</string>
    <string name="please_answer_correctly">please answer correctly!</string>
    <string-array name="data_name">
        <item>Gerkatin Solo, Komunitas yang Mengajarkan Bahasa Isyarat untuk Semua Orang</item>
        <item>Mengenal Komunitas E-Tuli yang Berjuang Kenalkan Bahasa Isyarat</item>
        <item>BISINDO dan SIBI, Dua Bahasa Isyarat Indonesia untuk Komunitas Tuli</item>
        <item>Asyiknya Melihat Pelatihan Bahasa Isyarat Bagi Kaum Tunarungu</item>
        <item>Rayakan Hari Bahasa Isyarat, Anak Tuna Rungu Kumpul di Rudis Gubernur</item>
        <item>Kala Siswa SLB di Indramayu Belajar Mengaji Melalui Bahasa Isyarat</item>
    </string-array>
</resources>